# tinyproto

./: CMakeLists.txt
src/: TinyLightProtocol.cpp  TinyLightProtocol.h
src/hal/: tiny_types.c  tiny_types.h  tiny_types_cpp.cpp
src/hal/no_platform/: no_platform_hal.c  no_platform_hal.h  no_platform_hal.inl
src/hal/qt/: qt_hal.cpp  qt_hal.h  qt_hal.inl
src/proto/light/: tiny_light.c  tiny_light.h
